--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="container">
     <!-- Logo -->
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="assets/logosn.svg" alt="BIP RADIO" width="60" />
+      <img src="assets/logosn1.svg" alt="BIP RADIO" width="60" />
     </a>
 
     <!-- Burger menu à droite -->
@@ -86,30 +86,119 @@
 </div>
 
 <!-- Hero -->
-<section class="bg-dark text-white text-center py-5" style="background: url('assets/background.svg') no-repeat center/cover; height: 50vh; background-color: rgba(0, 0, 0, 0.5); background-blend-mode: overlay;">
-  <div class="container d-flex flex-column justify-content-center h-100">
-    <h1 class="display-4 fw-bold">Bénin Info Première</h1>
-    <p class="lead">La station de radio d’information en continu</p>
+<section class="text-center" style="background-color: #fff; padding-top: 0; padding-bottom: 0;">
+  <div class="container position-relative" style="height: 50vh;">
+    <div style="
+      position: absolute;
+      inset: 0;
+      background: url('assets/background.svg') no-repeat center/cover;
+      opacity: 1;
+      z-index: 1;
+    "></div>
+    <div class="d-flex flex-column justify-content-center h-100 position-relative" style="z-index:2;">
+      <h1 class="display-4 fw-bold hero-title">Bénin Info Première</h1>
+      <p class="lead hero-subtitle">La station de radio d’information en continu</p>
+    </div>
+  </div>
+</section>
+
+<!-- Section Dernières infos  -->
+<section class="py-4 mt-3" style="background: #f5f5f5;">
+  <div class="container">
+    <!-- Bandeau Dernières infos -->
+    <div class="d-flex align-items-center mb-3">
+      <span class="badge bg-danger fw-bold px-3 py-2 me-2" style="font-size:1rem;">Dernières infos</span>
+      <span class="me-2" style="font-size:1.5rem; color:#f80303;">
+        <i class="fas fa-bolt"></i>
+      </span>
+      <span class="fw-semibold" style="font-size:1rem;">
+        Affaire Richard Boni OUOROU : les mis en cause dans l’attente de la décision du juge des libertés...
+      </span>
+    </div>
+    <!-- Bloc actualités -->
+    <div class="row g-4">
+      <!-- Actu principale -->
+      <div class="col-md-6">
+        <div class="bg-white rounded shadow-sm overflow-hidden h-100">
+          <div class="position-relative">
+            <img src="assets/imgactu/Richard-Boni-Oourou-.jpg" class="img-fluid w-100" alt="Actu principale">
+            <span class="position-absolute top-0 start-0 m-2 badge bg-dark">À la Une</span>
+          </div>
+          <div class="p-3">
+            <h5 class="fw-bold mb-2">
+              Richard Boni OUOROU, président du parti Le Libéral et 3 autres fonctionnaires du ministère de l’intérieur ont éte présentés au procureur spécial de la Cour de répression des infractions économiques et du terrorisme (CRIET) pendant une bonne heure ce mercredi 21 mai à Cotonou.
+            </h5>
+            <div class="text-muted small mb-2">
+              Écrit par: BIP Radio &nbsp; <i class="far fa-clock"></i> 21 mai 2025
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Actu secondaire -->
+      <div class="col-md-6">
+        <div class="bg-white rounded shadow-sm overflow-hidden h-100">
+          <div class="position-relative">
+            <img src="assets/imgactu/effondrement.png" class="img-fluid w-100" alt="Santé">
+            <span class="position-absolute top-0 start-0 m-2 badge bg-dark">Actualité</span>
+          </div>
+          <div class="p-3">
+            <h5 class="fw-bold mb-2">
+              Effondrement à Akpakpa : un mort sur le chantier d’un stade de quartier
+            </h5>
+            <div class="text-muted small mb-2">
+              Écrit par: BIP radio &nbsp; <i class="far fa-clock"></i> 19 mai 2025
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+            <a href="#" class="btn btn-link p-0">Lire plus →</a>
   </div>
 </section>
 
 <!-- Actualités -->
 <section class="py-5">
   <div class="container">
-    <h2 class="section-title">Dernières actualités</h2>
+    <h2 class="section-title bg-danger px-3 py-2 d-inline-block mb-4" style="font-size:1.2rem; color: #fff; border-radius:10px;">
+      Derniers Podcasts | Replays
+      <span class="ms-2" style="font-size:1.5rem; color:#fff;">
+        <i class="fas fa-podcast"></i>
+      </span>
+    </h2>
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card card-news">
-          <img src="https://source.unsplash.com/400x200/?news" class="card-img-top" alt="Actualité">
+          <img src="assets/image-des-emissions/BIP Info (3).svg" class="card-img-top" alt="Actualité">
           <div class="card-body">
-            <span class="badge bg-danger mb-2">Société</span>
+            <span class="badge bg-danger mb-2">BIP infos</span>
             <h5 class="card-title">Incident à Cotonou : ce que l'on sait</h5>
             <p class="card-text">Découvrez les premiers éléments communiqués par la police.</p>
             <a href="#" class="btn btn-link p-0">Lire plus →</a>
           </div>
         </div>
       </div>
-      <!-- Répéter pour plus d'actu -->
+      <div class="col-md-4">
+        <div class="card card-news">
+          <img src="assets/image-des-emissions/BIP Info (2).svg" class="card-img-top" alt="Actualité">
+          <div class="card-body">
+            <span class="badge bg-danger mb-2">Le journal en langue Fon</span>
+            <h5 class="card-title">Incident à Cotonou : ce que l'on sait</h5>
+            <p class="card-text">Découvrez les premiers éléments communiqués par la police.</p>
+            <a href="#" class="btn btn-link p-0">Lire plus →</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card card-news">
+          <img src="assets/image-des-emissions/faits divers.svg" class="card-img-top" alt="Actualité">
+          <div class="card-body">
+            <span class="badge bg-danger mb-2">Le journal des faits divers</span>
+            <h5 class="card-title">Incident à Cotonou : ce que l'on sait</h5>
+            <p class="card-text">Découvrez les premiers éléments communiqués par la police.</p>
+            <a href="#" class="btn btn-link p-0">Lire plus →</a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
@@ -160,6 +249,88 @@
   </div>
 </section>
 
+<!-- Section Les brèves et Actualités principales -->
+<section class="py-5 bg-white">
+  <div class="container">
+    <div class="row">
+      <!-- Colonne principale actualités -->
+      <div class="col-lg-8">
+        <div class="row g-3">
+          <!-- Grande actu principale -->
+          <div class="col-12">
+            <div class="position-relative">
+              <img src="https://source.unsplash.com/800x400/?president,meeting" class="img-fluid w-100 rounded" alt="Actu principale">
+              <div class="position-absolute bottom-0 start-0 p-3 w-100" style="background: linear-gradient(transparent, rgba(0,0,0,0.7));">
+                <h3 class="text-white fw-bold mb-0" style="text-shadow:1px 1px 4px #000;">
+                  Échanges musclés, mais pas de débordements à la Maison Blanche entre Donald Trump et Cyril Ramaphosa
+                </h3>
+              </div>
+            </div>
+          </div>
+          <!-- Petites actus -->
+          <div class="col-6 col-md-4">
+            <img src="https://source.unsplash.com/400x200/?police,news" class="img-fluid rounded mb-2" alt="">
+            <div class="small">Des diplomates étrangers pris pour cibles par l’armée à Jénine, Israël reconnait des « tirs de sommation ».</div>
+          </div>
+          <div class="col-6 col-md-4">
+            <img src="https://source.unsplash.com/400x200/?gaza,news" class="img-fluid rounded mb-2" alt="">
+            <div class="small">Gaza : intensification de l’offensive militaire, Israël, qui dénonce un « acharnement » contre l’État hébreu.</div>
+          </div>
+          <div class="col-6 col-md-4">
+            <img src="https://source.unsplash.com/400x200/?ukraine,news" class="img-fluid rounded mb-2" alt="">
+            <div class="small">Espagne : Andriy Portnov, ex-député ukrainien pro-russe, tué par balles près de Madrid.</div>
+          </div>
+          <div class="col-6 col-md-4">
+            <img src="https://source.unsplash.com/400x200/?russia,news" class="img-fluid rounded mb-2" alt="">
+            <div class="small">Deuxième déplacement en deux mois de Vladimir Poutine dans la région de Koursk.</div>
+          </div>
+          <div class="col-6 col-md-4">
+            <img src="https://source.unsplash.com/400x200/?gaza,children" class="img-fluid rounded mb-2" alt="">
+            <div class="small">Bande de Gaza : l’enfer de 1,1 million d’enfants pris au piège entre guerre et malnutrition.</div>
+          </div>
+          <div class="col-6 col-md-4">
+            <img src="https://source.unsplash.com/400x200/?palestine,news" class="img-fluid rounded mb-2" alt="">
+            <div class="small">Joseph Aoun et Mahmoud Abbas conviennent d’aider ensemble les Palestiniens du Liban.</div>
+          </div>
+        </div>
+      </div>
+      <!-- Colonne Les brèves -->
+      <div class="col-lg-4 mt-4 mt-lg-0">
+        <div class="bg-white border rounded shadow-sm p-3">
+          <h5 class="fw-bold mb-3 text-danger">Les brèves</h5>
+          <ul class="list-unstyled mb-3">
+            <li class="mb-2 d-flex align-items-start">
+              <span class="badge bg-danger me-2">21:55</span>
+              <span>Un des rappeurs nord-irlandais du groupe Kneecap inculpé, soupçonné de soutien au Hezbollah</span>
+            </li>
+            <li class="mb-2 d-flex align-items-start">
+              <span class="badge bg-danger me-2">21:50</span>
+              <span>Le président sud-africain Cyril Ramaphosa dit que sa rencontre avec Donald Trump s’est « très bien » passée</span>
+            </li>
+            <li class="mb-2 d-flex align-items-start">
+              <span class="badge bg-danger me-2">21:37</span>
+              <span>Gaza : Benyamin Netanyahu souffle le chaud et le froid sur le sort des otages</span>
+            </li>
+            <li class="mb-2 d-flex align-items-start">
+              <span class="badge bg-danger me-2">19:52</span>
+              <span>Face à Donald Trump, Cyril Ramaphosa appelle à « remettre à zéro » les relations entre les États-Unis et l’Afrique du Sud</span>
+            </li>
+            <li class="mb-2 d-flex align-items-start">
+              <span class="badge bg-danger me-2">18:42</span>
+              <span>Un cinquième cycle de pourparlers entre l’Iran et les États-Unis sur le nucléaire vient de s’ouvrir à Rome</span>
+            </li>
+          </ul>
+          <a href="#" class="text-danger small text-decoration-none">Toutes les brèves &rarr;</a>
+        </div>
+        <!-- Publicité -->
+        <div class="mt-3">
+          <img src="https://via.placeholder.com/300x250?text=Publicit%C3%A9" class="img-fluid rounded" alt="Publicité">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- Newsletter -->
 <section class="py-5 bg-light">
   <div class="container text-center">
@@ -180,17 +351,20 @@
         <p class="small mb-0">© 2025 BIP. Tous droits réservés.</p>
       </div>
       <div class="col-lg-4 mb-3">
-        <h6>Menu</h6>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-white text-decoration-none">Accueil</a></li>
-          <li><a href="#" class="text-white text-decoration-none">S'informer</a></li>
+          <li><a href="#" class="text-white text-decoration-none">CONNEXION</a></li>
         </ul>
       </div>
       <div class="col-lg-4 mb-3">
-        <h6>Suivez-nous</h6>
-        <a href="#" class="text-white me-2">Facebook</a>
-        <a href="#" class="text-white me-2">Twitter</a>
-        <a href="#" class="text-white">YouTube</a>
+        <h6>SUIVEZ-NOUS</h6>
+        <!-- Icônes sociales déplacées ici -->
+        <div class="navbar-icons d-flex justify-content-center justify-content-lg-start gap-2 mb-2">
+          <a href="#" aria-label="YouTube" class="text-white fs-4"><i class="fab fa-youtube"></i></a>
+          <a href="#" aria-label="TikTok" class="text-white fs-4"><i class="fab fa-tiktok"></i></a>
+          <a href="#" aria-label="Spotify" class="text-white fs-4"><i class="fab fa-spotify"></i></a>
+          <a href="#" aria-label="Apple" class="text-white fs-4"><i class="fab fa-apple"></i></a>
+          <a href="#" aria-label="Facebook" class="text-white fs-4"><i class="fab fa-facebook"></i></a>
+        </div>
       </div>
     </div>
   </div>
